platformio.ini cleanup

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,9 +17,9 @@ board = wemos_d1_mini32
 framework = arduino, espidf
 monitor_speed = 115200
 monitor_echo = yes
-monitor_filters = 
-	esp32_exception_decoder
-	log2file
+monitor_filters =
+    esp32_exception_decoder
+    log2file
 lib_ldf_mode = deep
 lib_deps = 
 	https://github.com/rednblkx/HomeSpan.git#home-key
@@ -30,10 +30,12 @@ lib_deps =
 board_build.partitions = with_ota.csv
 extra_scripts = pre:extra_script.py
 build_flags = 
-	-O2
-	-DCONFIG_LOG_COLORS
-build_unflags = 
-	-Os
+    -O2
+    -DCONFIG_LOG_COLORS
+    -std=gnu++17
+build_unflags =
+    -Os
+    -std=gnu++11
 
 [env:debug]
 build_type = debug
@@ -41,14 +43,11 @@ build_type = debug
 [env:release]
 build_type = release
 build_unflags =
-	${env.build_unflags}
-	-Werror=all
+    ${env.build_unflags}
+    -Werror=all
 
 [env:ota]
-build_type = release
-build_unflags =
-	${env.build_unflags}
-	-Werror=all
+build_type = debug
 upload_protocol = espota
 upload_port= HomeSpan-homekey.local
 upload_flags =
