added other tested boards

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,13 @@ default_envs = debug
 
 [env]
 platform = espressif32
-board = wemos_d1_mini32
+; https://docs.platformio.org/en/latest/boards/espressif32/wemos_d1_mini32.html
+;board = wemos_d1_mini32
+; s2_mini needs -DARDUINO_USB_CDC_ON_BOOT=0
+;board = lolin_s2_mini
+;board = lolin_s3_mini
+;board = lolin_c3_mini
+
 framework = arduino, espidf
 monitor_speed = 115200
 monitor_echo = yes
@@ -30,12 +36,14 @@ lib_deps =
 board_build.partitions = with_ota.csv
 extra_scripts = pre:extra_script.py
 build_flags = 
-    -O2
+    -Os
     -DCONFIG_LOG_COLORS
     -std=gnu++17
+;    -DARDUINO_USB_CDC_ON_BOOT=0
 build_unflags =
-    -Os
     -std=gnu++11
+;    -DARDUINO_USB_CDC_ON_BOOT=1
+
 
 [env:debug]
 build_type = debug
