--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,11 @@ default_envs = debug
 
 [env]
 platform = espressif32
+board = esp32dev
 ; https://docs.platformio.org/en/latest/boards/espressif32/wemos_d1_mini32.html
 ;board = wemos_d1_mini32
 ; s2_mini needs -DARDUINO_USB_CDC_ON_BOOT=0
+; still doesn't seem to work?
 ;board = lolin_s2_mini
 ;board = lolin_s3_mini
 ;board = lolin_c3_mini
@@ -33,6 +35,7 @@ lib_deps =
 	telecombretagne/YACL@^1.0.3
 	johboh/nlohmann-json@^3.11.3
 	https://github.com/mlesniew/PicoMQTT.git
+    esphome/libsodium@^1.10018.1
 board_build.partitions = with_ota.csv
 extra_scripts = pre:extra_script.py
 build_flags = 
